# Search_Engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  converterjson.cpp  converterjson.h  images.qrc  invertedindex.cpp  invertedindex.h  listmodel.cpp  mainwindow.cpp  mainwindow.h  searchserver.cpp
config/: config.json  requests.json
include/: converterjson.h  invertedindex.h  listmodel.h  mainwindow.h  searchengineexeptions.h  searchserver.h
src/: CMakeLists.txt  converterjson.cpp  images.qrc  invertedindex.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  searchserver.cpp
test/: CMakeLists.txt  answers.json  search_engine_tests.cpp  search_engine_tests.h
test/include/: search_engine_tests.h
test/src/: CMakeLists.txt  search_engine_tests.cpp
test/test_content/: 1.txt  3.txt
test/test_content/rus/: Adskij_mir.txt
